# AMOS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  amos_config.cmake
.github/workflows/: codeql-analysis.yml
benchmark/akg/: test_ms_conv_tensorcore.py
benchmark/amos/: mapping_batchconv2d_tensorcore.py  mapping_batchedfc_tensorcore.py  mapping_bertbase_tensorcore.py  mapping_capsuleconv2d_tensorcore.py  mapping_capsulenet_tensorcore.py  mapping_conv1d_tensorcore.py  mapping_conv2d_tensorcore.py  mapping_conv3d_tensorcore.py  mapping_depthwiseconv2d_tensorcore.py  mapping_dilatedconv2d_tensorcore.py  mapping_gemm_tensorcore.py  mapping_gemv_tensorcore.py  mapping_groupedconv2d_tensorcore.py  mapping_mean_tensorcore.py  mapping_milstm_tensorcore.py  mapping_mobilenetv1_tensorcore.py  mapping_resnet18_tensorcore.py  mapping_resnet50_tensorcore.py  mapping_scan_tensorcore.py  mapping_shufflenet_tensorcore.py  mapping_transposedconv2d_tensorcore.py  mapping_variance_tensorcore.py
benchmark/amos/tuned_logs/: .gitignore
benchmark/ansor/: conv2d_nchw.py  conv2d_nchw_im2col.py
benchmark/autotvm/: autotvm-conv2d-nchw-createtask.py  autotvm-topi-conv2d-nchw-autoextract.py  autotvm-topi-conv2d-nchw.py  conv2d.py  conv_op_config_longtail.txt  tune_relay_cuda.py
benchmark/cublas_cudnn/: CMakeLists.txt
benchmark/cublas_cudnn/Conv3d/: Makefile
benchmark/cublas_cudnn/Conv3d/include/: basic.h  cudnn_conv.h  profile.h
benchmark/cublas_cudnn/Conv3d/src/: cudnn_conv.cpp  main.cpp  profile.cpp
benchmark/cublas_cudnn/include/: configs.h
benchmark/cublas_cudnn/result/: conv2d_prof  gemm_prof
benchmark/cublas_cudnn/src/: batched_conv.cu  cuda_batch_gemm_bench.cu  cuda_conv1d_bench.cu  cuda_conv3d_bench.cu  cuda_conv_bench.cu  cuda_conv_dilated_bench.cu  cuda_depth_conv_bench.cu  cuda_gemm_bench.cu  cuda_gemv_bench.cu  cuda_gemv_bench_noTC.cu  cudnn_helper.h  grouped_conv.cu  tensor.h
benchmark/cutlass/conv2d/: ampere_tensorop_conv2d_nhwc.csv  ampere_tensorop_conv2d_nhwc.cu
benchmark/pytorch/: MILSTM.py  bert_base.py  capsule.py  conv1d.py  conv2d.py  conv3d.py  conv_op_perf_longtail.txt  conv_transpose2d.py  gemm.py  mean.py  mobile_v1.py  mobile_v2.py  resnet18.py  resnet50.py  run_all_conv_op_longtail.py  scan.py  shufflenet_v1.py  variance.py  wcv.py  weightnet.py  yolo_v1.py
benchmark/triton/: CMakeLists.txt
benchmark/triton/bench/: CMakeLists.txt  conv.cc
benchmark/triton/common/: conv.h  dot.h
benchmark/tvm-cudnn/: conv2d.py
benchmark/unit/: conv-fused.py
experiments/cuda/batch-filter-conv/: eval_effficiency.py
include/tvm/nas/: api.h  (+2 more)
jvm/core/: pom.xml
own_tests/: conv_nhwc_baseline.py  conv_nhwc_intrinsic.py  conv_nhwc_intrinsic_capsule.py
python/tvm/: __init__.py
src/auto_scheduler/: compute_dag.cc  loop_state.cc  transform_step.cc  utils.h
src/auto_tensorize/: capsule.cc  compute_transform.cc  hw_abs_dag.cc  hw_abstraction.cc  matcher.cc  recipe.cc  utils.cc  utils.h
src/autotvm/: feature_visitor.cc  feature_visitor.h  touch_extractor.cc  touch_extractor.h
src/driver/: driver_api.cc
src/nas/: graph.cc
src/runtime/: library_module.cc  workspace_pool.cc
src/saber/: utils.cc
src/te/: tensor.cc
src/tg/: logging.cc  logging.h  thread_pool.h  utils.cc  utils.h  utils.tpp
tests/auto_tensorize/: test_ansor_integrate.py  test_auto_schedule.py  test_compute_transform.py  test_compute_transform_conv2d.py  test_compute_transform_gemm.py  test_schedule_params.py  test_serialize_dag.py  test_tensorization_utils.py  test_transform_generator.py
tests/tg/: test_buffer_access_feature_lines.cpp  test_performance.cpp
tutorials/auto_tensorize/: README.md  autotvm_conv2d_tensorcore_nchw.py  conv2d_implicit_gemm_tensorcore.py  conv2d_output_transform_nchw.py  conv2d_tensorcore.py  opt_conv_tensorcore.py
tutorials/autotvm/: tune_conv2d_tensorcore_hwcn_int8.py  tune_conv2d_tensorcore_nhwc_fp16.py  tune_conv3d_tensorcore_ndhwc_fp16.py  tune_dense_tensorcore_fp16.py
tutorials/illegal/: compute_at.py  makeTVMdie.py  memory_scope_gpu.py  parallel_reduction.py  vectorize_reduction.py
tutorials/optimize/: opt_matmul_auto_tensorcore.py
tutorials/saber/: conv2d_inf_loops_cuda_core_fp32fp32.py  conv2d_loops_fp16fp32_gold.py  conv2d_nhwc_implicit_gemm_pro_epilogue.py  conv2d_nhwc_implicit_gemm_tensorcore_pro_epilogue.py  gemm_tensorcore.py  test_conv2d.py  tvm_conv1d.py  tvm_gemm_mali.py
tutorials/tensor_graph/: MILSTM.py  capsule_net_cuda.py  conv2d_bn_relu_cuda.py  conv2d_cuda.py  mobile_v1.py  mobile_v2.py  resnet18.py  resnet50.py  shufflenet.py  transformer.py  weightnet.py
(+948 files in other folders)
